--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -27,7 +27,7 @@
     {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-      {% if post.collection=='preprints'%}
+      {% if post.collection=='publications' or post.collection=='preprints'%}
         {{ title }}
       {% elsif post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
@@ -42,7 +42,7 @@
 
     {% if post.collection == 'teaching' %}
       <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-    {% elsif post.collection=='preprints'%}
+    {% elsif post.collection=='preprints' or post.collection=='publications'%}
       {% if post.abstract %}
         <details><summary>Abstract</summary>
         <blockquote>
