--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -65,7 +65,7 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #a51417;
+$info-color                 : #ed2791;
 
 /* brands */
 $behance-color              : #1769FF;
