moving things around

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,6 +34,8 @@
 @import "archive";
 @import "sidebar";
 
+@import "assets/css/academicons.css";
+
 @import "vendor/font-awesome/fontawesome";
 @import "vendor/font-awesome/solid";
 @import "vendor/font-awesome/brands";
