trying to use different fonts

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -69,7 +69,7 @@
         <a href="{{ post.code }}"><i class="fas fa-fw fa-code zoom" aria-hidden="true"></i></a>
       {% endif %}
       {% if post.github %}
-        <a href="{{ post.github }}"><i class="fab fa-fw fa-github zoom" aria-hidden="true"></i></a>
+        <a href="{{ post.github }}"><i class="fab fa-fw ai-psyarxiv zoom" aria-hidden="true"></i></a>
       {% endif %}
       </p>
     {% elsif post.collection == 'posts' and post.date %}
