moving things around

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,7 +34,7 @@
 @import "archive";
 @import "sidebar";
 
-@import "assets/css/academicons.css";
+@import "academicons/css/academicons.css";
 
 @import "vendor/font-awesome/fontawesome";
 @import "vendor/font-awesome/solid";
