--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -18,7 +18,7 @@
 <meta name="msapplication-TileImage" content="{{ base_path }}/images/mstile-150x150.png">
 <meta name="msapplication-config" content="{{ base_path }}/images/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
+<!--<link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>-->
 
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
