--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -64,6 +64,7 @@
       {% endif %}
       {% if post.paperurl %}
         <a href="{{ post.paperurl }}"><i class="fas fa-fw fa-file-pdf zoom" aria-hidden="true"></i></a>
+		<a href="{{ post.paperurl }}"><i class="fa-file-pdf zoom" aria-hidden="true"></i></a>
       {% endif %}
       {% if post.code %}
         <a href="{{ post.code }}"><i class="fas fa-fw fa-code zoom" aria-hidden="true"></i></a>
