--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,7 +34,10 @@
 @import "archive";
 @import "sidebar";
 
-
+@import "vendor/font-awesome/fontawesome";
+@import "vendor/font-awesome/solid";
+@import "vendor/font-awesome/brands";
+@import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
 @import "custom";
