--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -61,10 +61,11 @@
 .archive__item-excerpt {
   display: none;
   margin-top: 0;
-  font-size: $type-size-60;
+  font-size: $type-size-6;
 
   & + p {
     text-indent: 0;
+    display: none;
   }
 }
 
