--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -98,7 +98,7 @@
         </a>
       </p>
     {% elsif post.excerpt and site.read_more != 'enabled' %}
-    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
+    <p class="archive__item-excerpt" style="display: none;" itemprop="description">{{ post.excerpt | markdownify }}</p>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
       <p class="archive__item-excerpt" itemprop="description">
         <p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}
