--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -100,7 +100,9 @@
       </p>
     {% elsif post.excerpt and site.read_more != 'enabled' %}
 		<div id="show">Read more</div>
+		<div class="menu" style="display: none;">
 		<p class="archive__item-excerpt" style="display: none;" itemprop="description">{{ post.excerpt | markdownify }}</p>
+		</div>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
       <p class="archive__item-excerpt" itemprop="description">
         <p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}
