an attribute they never have

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -83,8 +83,8 @@
 	  {% if post.osf %}
         <a href="{{ post.osf }}"><i class="ai ai-osf zoom" aria-hidden="true"></i></a>
       {% endif %}
-	  {% if post.excerpt %}
-        <i id="show" class="ai ai-osf zoom" aria-hidden="true"></i><
+	  {% if post.an_attribute_that_they_never_have %}
+        <i id="show" class="ai ai-osf zoom" aria-hidden="true"></i>
       {% endif %}
       </p>
     {% elsif post.collection == 'posts' and post.date %}
