--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -83,7 +83,7 @@
 	  {% if post.osf %}
         <a href="{{ post.osf }}"><i class="ai ai-osf zoom" aria-hidden="true"></i></a>
       {% endif %}
-	  {% if post.an_attribute_that_they_never_have %}
+	  {% if post.summary_paragraph %}
         <i id="show" class="ai ai-osf zoom" aria-hidden="true"></i>
       {% endif %}
       </p>
