--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -84,7 +84,7 @@
         <a href="{{ post.osf }}"><i class="ai ai-osf zoom" aria-hidden="true"></i></a>
       {% endif %}
 	  {% if post.summary_paragraph %}
-        <i id="show" class="ai ai-osf zoom" aria-hidden="true"></i>
+        <i id="show" class="fab fa-fw fa-angle-down zoom" aria-hidden="true"></i>
       {% endif %}
       </p>
     {% elsif post.collection == 'posts' and post.date %}
