--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,8 +60,13 @@
       {% endif %}
 	  {% if post.summary_paragraph %}
         <i id="show" class="fas fa-fw fa-angle-down zoom" aria-hidden="true"></i>
+		<div class="menu" style="display: none;">
+		<p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
+		</div>
       {% endif %}
       <br>
+	  
+	  
       {% if post.link %}
         <a href="{{ post.link }}"><i class="fas fa-fw fa-link zoom" aria-hidden="true"></i></a>
       {% endif %}
