--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -58,11 +58,12 @@
         {{ post.citation }}
       {% endif %}
 	  {% if post.summary_paragraph %}
-	  <label for="{{ post.id }}">Click me</label>
+	  <label for="{{ post.id }}"><i class="fas fa-fw fa-angle-down zoom" aria-hidden="true"></i></label>
 	  <input id="{{ post.id }}" type="checkbox">
 	  <div class="description">
 	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
 	  </div>
+		
       {% endif %}
 	  
 	  <br>
