--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -59,9 +59,8 @@
         {{ post.citation }}
       {% endif %}
 	  {% if post.summary_paragraph %}
-	  <label for="{{ post.id }}"><i class="fas fa-fw fa-angle-down zoom" aria-hidden="true"></i></label>
-	  <input id="{{ post.id }}" type="checkbox">
-	  <div class="description">
+	  <i id ="show" class="fas fa-fw fa-angle-down zoom" aria-hidden="true"></i>
+	  <div class="description" style="display: none;">
 	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
 	  </div>
 		
