--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -59,7 +59,7 @@
         {{ post.citation }}
       {% endif %}
 	  {% if post.summary_paragraph %}
-	  <i id ="show" class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onlick="console.log('b');$('#description').toggle('slide')"></i>
+	  <i onlick="console.log('b');$('#description').toggle('slide')">details</i>
 	  <div id="description" style="display: none;">
 	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
 	  </div>
