--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -59,8 +59,8 @@
         {{ post.citation }}
       {% endif %}
 	  {% if post.summary_paragraph %}
-	  <i id ="show" class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="console.log('b');$('#{{ post.id }}').toggle('slide')"></i>
-	  <div id="{{ post.id }}" style="display: none;">
+	  <i class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="console.log('b');$('.description').toggle('slide')"></i>
+	  <div class="description" style="display: none;">
 	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
 	  </div>
 		
