--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -59,7 +59,7 @@
         {{ post.citation }}
       {% endif %}
 	  {% if post.summary_paragraph %}
-	  <i class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="console.log('b');$('.archive__item-excerpt').toggle('slide')"></i>
+	  <i class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="console.log('c');$('.archive__item-excerpt').toggle('slide')"></i>
 	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
 		
       {% endif %}
