--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -59,8 +59,10 @@
         {{ post.citation }}
       {% endif %}
 	  {% if post.summary_paragraph %}
-	  <i class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="console.log('c');$('.archive__item-excerpt').toggle('slide')"></i>
+	  <i id ="show" class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="console.log('b');$('#description').toggle('slide')"></i>
+	  <div id="description" style="display: none;">
 	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
+	  </div>
 		
       {% endif %}
 	  
