--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,7 +60,9 @@
       {% endif %}
 	  {% if post.summary_paragraph %}
 	  <i id ="show" class="fas fa-fw fa-angle-down zoom" aria-hidden="true" onclick="$(this).parent().find('#description').toggle('slide')"></i>
-	  <p id="description" style="display: none;" class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
+	  <div id="description" style="display: none;">
+	  <p class="archive__item-excerpt" itemprop="description">{{ post.summary_paragraph | markdownify }}</p>
+	  </div>
 		
       {% endif %}
 	  
