--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -46,6 +46,9 @@
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
+      {% if author.mastodone %}
+        <li><a href="https://{{ author.mastodone }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Mastodone</a></li>
+      {% endif %}
       {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
       {% endif %}
