--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -47,7 +47,7 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.mastodon %}
-        <li><a rel="me" href="https://{{ author.mastodo }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Mastodon</a></li>
+        <li><a rel="me" href="https://{{ author.mastodo }}">Mastodon</a></li>
       {% endif %}
       {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
