--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -46,9 +46,9 @@
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
-      {% if author.mastodon %}
+      <!-- {% if author.mastodon %}
         <li><a rel="me" href="https://c.im/@matan">Mastodon</a></li>
-      {% endif %}
+      {% endif %} -->
       {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
       {% endif %}
