--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -66,7 +66,7 @@
 
       {% endif %}
 
-      {% if post.excerpt and post.collection == 'research' and site.read_more != 'enabled' %}
+      <!-- {% if post.excerpt and post.collection == 'research' and site.read_more != 'enabled' %}
         <p class="archive__item-excerpt" itemprop="description">
           <a href="{{ base_path }}{{ post.url }}" rel="permalink">
           <div class="container">
@@ -86,8 +86,9 @@
             </strong>
           </p>
         </p>
-      {% endif %}
+      {% endif %} -->
 
+      <br id="break-line">
       {% if post.link %}
         <a href="{{ post.link }}"><i class="fas fa-fw fa-link zoom" aria-hidden="true"></i></a>
       {% endif %}
