a different approach to toggling the break

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -88,7 +88,7 @@
         </p>
       {% endif %} -->
 
-      <!-- <br class="break-line"> -->
+      <br class="break-line">
       {% if post.link %}
         <a href="{{ post.link }}"><i class="fas fa-fw fa-link zoom" aria-hidden="true"></i></a>
       {% endif %}
