--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -88,7 +88,7 @@
         </p>
       {% endif %} -->
 
-      <br class="break-line">
+      <div class="icons">
       {% if post.link %}
         <a href="{{ post.link }}"><i class="fas fa-fw fa-link zoom" aria-hidden="true"></i></a>
       {% endif %}
@@ -117,6 +117,7 @@
     {% elsif post.collection == 'posts' and post.date %}
       <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
     {% endif %}
+    </div>
 
   </article>
 </div>
