--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -46,6 +46,9 @@
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
+      {% if author.twitter %}
+        <li><a href="https://bsky.app/profile/{{ author.twitter }}.bsky.social/"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Bluesky</a></li>
+      {% endif %}
       <!-- {% if author.mastodon %}
         <li><a rel="me" href="https://c.im/@matan">Mastodon</a></li>
       {% endif %} -->
