bluesky logo an new bio

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -47,7 +47,7 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.bsky %}
-        <li><a href="https://bsky.app/profile/{{ author.bsky }}.bsky.social/"><i class="fa-solid fa-square" aria-hidden="true"></i> Bluesky</a></li>
+        <li><a href="https://bsky.app/profile/{{ author.bsky }}.bsky.social/">🟦 Bluesky</a></li>
       {% endif %}
       <!-- {% if author.mastodon %}
         <li><a rel="me" href="https://c.im/@matan">Mastodon</a></li>
